k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: statex
  labels:
    name: statex
    app: statex-platform
